feature: Implement CRUD functionality

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -2,10 +2,7 @@
     display: flex;
     flex: 1;
     width: 100%;
-    box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.10);
-    -webkit-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.10);
-    -moz-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.10);
-
+    max-height: 85px;
     align-items: center;
     justify-content: flex-end;
 
