--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -3,21 +3,38 @@
 
     <div class="products-table">
         <div class="header-actions">
-            <button (click)="addProduct()">Add Product</button>
+            <button routerLink="/products/add">
+                <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#FFFFFF"><path d="M440-440H200v-80h240v-240h80v240h240v80H520v240h-80v-240Z"/></svg>
+                Add Product
+            </button>
         </div>
 
         <table>
             <thead>
-                <th>asd</th>
+                <th>Product</th>
+                <th>Description</th>
+                <th>Stock</th>
+                <th>Product</th>
+                <th [width]="100"></th>
             </thead>
             <tbody>
-                <td>asd</td>
+                @for (product of products; track $index) {
+                    <tr>
+                        <td>{{product.name}}</td>
+                        <td>{{product.description}}</td>
+                        <td>{{product.stock}}</td>
+                        <td>{{product.price}}</td>
+                        <td>
+                            <span class="edit-btn" routerLink="/products/edit/{{product.id}}">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="15px" viewBox="0 -960 960 960" width="15px" fill="#fff"><path d="M200-200h57l391-391-57-57-391 391v57Zm-80 80v-170l528-527q12-11 26.5-17t30.5-6q16 0 31 6t26 18l55 56q12 11 17.5 26t5.5 30q0 16-5.5 30.5T817-647L290-120H120Zm640-584-56-56 56 56Zm-141 85-28-29 57 57-29-28Z"/></svg>
+                            </span>
+                            <span class="delete-btn" (click)="deleteProduct(product.id)">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="15px" viewBox="0 -960 960 960" width="15px" fill="#fff"><path d="M280-120q-33 0-56.5-23.5T200-200v-520h-40v-80h200v-40h240v40h200v80h-40v520q0 33-23.5 56.5T680-120H280Zm400-600H280v520h400v-520ZM360-280h80v-360h-80v360Zm160 0h80v-360h-80v360ZM280-720v520-520Z"/></svg>
+                            </span>
+                        </td>
+                    </tr>
+                }
             </tbody>
         </table>
-        <ul>
-            @for (product of products; track $index) {
-                <li>{{product.name}}</li>
-            }
-           </ul>
     </div>
 </div>
